# pms-mock

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 3a3225dd3e0e_add_oauth_clients_table.py  80e5e3761069_rename_posted_at_to_created_at_on_line_.py  8d86027dbfdf_drop_created_by_id_and_posted_by_id_.py  a8ef884ad7d1_initial_migration.py
app/: config.py  dependencies.py  exceptions.py  main.py
app/auth/: jwt.py  oauth2_scheme.py  password.py
app/controllers/: auth_controller.py  billing_controller.py  guest_controller.py  oauth_controller.py  reservation_controller.py  room_controller.py  user_controller.py
app/database/: session.py
app/models/: __init__.py  billing.py  guest.py  oauth_client.py  reservation.py  room.py  user.py
app/routers/: auth.py  billing.py  guests.py  reservations.py  rooms.py  users.py
app/schemas/: auth.py  billing.py  common.py  guest.py  oauth_client.py  reservation.py  room.py  user.py
app/utils/: date_helpers.py  pagination.py
postman/: Hotel_PMS_API.postman_collection.json
scripts/: seed.py
tests/: conftest.py
tests/factories/: model_factories.py
tests/integration/: test_auth.py  test_reservations.py  test_rooms.py
tests/unit/: test_date_helpers.py  test_jwt.py  test_password.py
